5. Генерирование колоды карт. FlatMap [#504873 #315845]