@@ -1,14 +1,13 @@
 package ru.job4j.stream;
 
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 public class DoubleLoop {
     public static void main(String[] args) {
         List<Card> deck = Stream.of(Suit.values())
-                        .flatMap(suit -> Stream.of(Value.values())
-                                        .map(cardValue -> new Card(suit, cardValue))
-                                .collect(Collectors.toList())());
+                .flatMap(suit -> Stream.of(Value.values())
+                        .map(cardValue -> new Card(suit, cardValue)))
+                .toList();
     }
 }
